# reprosyn

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: addingmethods.rst  cli.rst  conf.py  demo.rst  dev.rst  index.rst  install.rst  methods.rst  modules.rst  reprosyn.methods.rst  reprosyn.rst
docs/source/methods/: gans.rst  index.rst  ipf.rst  mst.rst
examples/: Loop_epsilons.ipynb  reprosyn_as_package.ipynb
reprosyn/: pyproject.toml
src/output/: mbi.csv  mst.csv
src/reprosyn/: __init__.py  cli.py  cli_utils.py  dataset.py  generator.py  run.py
src/reprosyn/methods/: __init__.py
src/reprosyn/methods/config/: myconfig.json
src/reprosyn/methods/ctgan/: cli.py  ctgan.py
src/reprosyn/methods/data_synthesiser/: README.md  cli.py  data_synthesiser.py  generative_model.py  gmm.py  wrapper.py
src/reprosyn/methods/data_synthesiser/data_synthesiser_utils/: __init__.py  utils.py
src/reprosyn/methods/data_synthesiser/data_synthesiser_utils/datatypes/: AbstractAttribute.py  FloatAttribute.py  IntegerAttribute.py  StringAttribute.py  constants.py
src/reprosyn/methods/data_synthesiser/data_synthesiser_utils/datatypes/utils/: DataType.py
src/reprosyn/methods/gans/: README.md  cli.py  gans.py  pate_gan.py
src/reprosyn/methods/ipf/: cli.py  ipf.py
src/reprosyn/methods/mbi/: README.md  cdp2adp.py  cli.py  mst.py  privbayes.py
src/reprosyn/methods/synthpop/: cli.py  synthpop.py
tests/: custom_method.py  test_methods.py  test_reprosyn.py
