[tool.poetry]
name = "reprosyn"
version = "0.1.0"
description = ""
authors = ["callummole <cmole@turing.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
private-pgm = {git = "https://github.com/ryan112358/private-pgm.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
